# AdaptiveRTC_PTT

./: .gitignore  ECS_INTEGRATION.md  README.md  run_tests.sh
AdaptiveRTC/: BUILD_GUIDE.md  CMakeLists.txt  CODE_WALKTHROUGH.md  COMPLETE_SUMMARY.md  IMPLEMENTATION_GUIDE.md  INDEX.md  MULTITHREADING_GUIDE.md  README.md  plan.md  run.bat
AdaptiveRTC/include/: adaptive_jitter_buffer.h  ecs_detector.h  jitter_buffer.h  metrics_logger.h  network_simulator.h  packet.h  rate_controller.h  receiver.h  rtt_tracker.h  sender.h
AdaptiveRTC/src/: adaptive_jitter_buffer.cpp  ecs_detector.cpp  jitter_buffer.cpp  main_simulator.cpp  metrics_logger.cpp  network_simulator.cpp  packet.cpp  rate_controller.cpp  receiver.cpp  rtt_tracker.cpp  sender.cpp
AdaptiveRTC/test/: integration_test.cpp  test_adaptive_jitter_buffer.cpp  test_ecs_detector.cpp  test_jitter_buffer.cpp  test_network_simulator.cpp  test_packet.cpp  test_rate_controller.cpp  test_rtt_tracker.cpp
NetSense AI/: .gitignore  CMakeLists.txt  README.md  build.gradle.kts  gradle.properties  pull_logs.bat  settings.gradle.kts
NetSense AI/androidApp/: build.gradle.kts
NetSense AI/androidApp/src/main/: AndroidManifest.xml
NetSense AI/androidApp/src/main/java/com/netsense/meshapp/: MainActivity.kt  VoiceCallService.kt
NetSense AI/androidApp/src/main/res/drawable/: ic_app_icon.xml  splash_screen.xml
NetSense AI/androidApp/src/main/res/values/: colors.xml  themes.xml
NetSense AI/app/: build.gradle
NetSense AI/app/src/main/: AndroidManifest.xml
NetSense AI/app/src/main/cpp/: CMakeLists.txt  mesh_engine.cpp  routing.cpp  routing_table.h
NetSense AI/app/src/main/java/com/example/mesh/: MainActivity.kt  MeshManager.kt
NetSense AI/include/netsense_mesh/: CoreLogger.h  mesh_engine.h  node.h  routing_table.h  state_machine.h
NetSense AI/shared/: build.gradle.kts
NetSense AI/shared/src/androidMain/kotlin/com/netsense/mesh/: AppLogger.kt  CallManager.kt  CallStateMachine.kt  EcsBridge.kt  JitterBridge.kt  LogExporter.kt  MeshManager.kt  RtpManager.kt  RtpPacket.kt  SignalingManager.kt  UiVoiceState.kt  VoiceAudioManager.kt  VoiceTransportConfig.kt  WifiDirectVoiceManager.kt
NetSense AI/shared/src/androidMain/kotlin/net/sense/mesh/: AndroidMeshService.kt  Dispatchers.kt  LocalMessageStore.kt
NetSense AI/shared/src/androidUnitTest/kotlin/com/netsense/mesh/: CallStateMachineTest.kt  EcsBridgeTest.kt  JitterBridgeTest.kt  RtpPacketTest.kt  VoiceTransportConfigTest.kt
NetSense AI/shared/src/commonMain/kotlin/net/sense/mesh/: Dispatchers.kt  MeshCallback.kt  MeshModels.kt  MeshScreens.kt  MeshService.kt  MeshViewModel.kt
NetSense AI/src/android/java/com/netsense/mesh/: BleManager.kt  MeshManager.kt  NetSenseMesh.kt
NetSense AI/src/cpp/: CoreLogger.cpp  ecs_bridge.cpp  jni_bridge.cpp  mesh_engine.cpp  node.cpp  routing_table.cpp  state_machine.cpp
